<resources>
    <string name="app_name">Trace My Ip</string>
    <string name="Autore">Gabriele Galluzzo</string>
    <string name="app_desc">Traccia i cambi di indirizzi di tutte le interfacce e determina gli indirizzi pubblici associati al dispositivo</string>
    <string name="credits">Un ringraziamento per gli autori e gli artisti del sito http://icons8.it per le icone del launcher e della notifica</string>
    <string name="action_about">Informazioni</string>
    <string name="send_to">Condividi</string>
    <string name="only_ext_ip">Solo ip esterni</string>
    <string name="ip_assigned_in_day">Ip assegnati nel giorno</string>
    <string name="day_assigned_ip">Giorni in cui è stato assegnato l\'IP</string>
    <string name="DialogDetailTxtData">Data</string>
    <string name="DialogDetailTxtIp">Ip</string>
    <string name="DialogDetailDefaultData">1/1/0001</string>
    <string name="DialogDetailDefaultIp">0.0.0.0</string>
    <string name="conferma">Conferma</string>
    <string name="sovrascrivo_file">Sovrascrivo il file?</string>
    <string name="annulla">Annulla</string>
    <string name="ok">OK</string>
    <string name="reset_preferences">Reset delle preferenze</string>
    <string name="reset_preferences_conferma">Vuoi veramente ripristinare le preferenze ai valori di default?</string>
    <string name="export_DB_Confirm_toast">Copiato in%n%s</string>
    <string name="export_DB_Confirmed_copy_dialog">Copiato %n%s</string>
    <string name="export_DB_Confirm_dialog">%n%s</string>
    <string name="export_DB_Error_toast">Errore: %s</string>
    <string name="export_DB_PermissionError_toast">Export impossibile senza il permesso</string>
    <!--<string name="action_settings">Settings</string>-->
    <!--<string name="section_format">Hello World from section: %1$d</string>-->
    <string name="channel_ID">TraceMyIP12345</string>
    <string name="channel_name">TraceMyIpNotificationChannel</string>
    <string name="channel_description">The channel for the notifications of Trace my IP app</string>
    <string name="determino_l_ip_pubblico">Determino l\'ip pubblico</string>
    <string name="mostra_solo_ip_esterni">Mostra solo ip esterni</string>
    <string name="mostra_solo_gli_ip">Mostra solo gli ip</string>
    <string name="mostra_gli_ip_assegnati_per_data">Mostra gli ip assegnati per data</string>
    <string name="esporta_vista">Esporta vista</string>
    <string name="salva_tutto_il_db">Salva tutto il DB</string>
    <string name="about">About</string>
    <string name="salvataggio_db_dialog">Salvataggio DB</string>
    <string name="ERROR_Creating_log_dir">Non posso creare la directory per salvare il DB</string>
    <string name="GENERIG_ERROR_TITLE">ERRORE</string>
</resources>
